# wavefront-sensor-neural-network

./: .autosave.vim  .gitignore  .save.vim  CompareNN_MatlabBilinearInterp.py  GetMeasuredDiffractionPattern.py  LICENSE  PropagateSphericalAperture.py  README.md  TestPropagate.py  _main.py  a.out  add_noise.sh  addnoise.py  ambiguitynet.py  buildui.sh  calibrate_measured_data.py  checkoutput.py  datagen.py  debug.gdb  diffraction.py  diffraction_functions.py  diffraction_net.py  error_10.p  error_15.p  error_20.p  error_25.p  error_30.p  error_35.p  error_40.p  error_45.p  error_5.p  error_50.p  find_similar_diffraction.py  generate_data.py  get_single_sample.py  main.py  main.ui  makeplots.py  makeplots.sh  match_experimental_axes.py  (+30 more)
Data_for_Jonathon/multiple_measurements/: m3_scan_0000.fits  m3_scan_0001.fits  m3_scan_0002.fits  m3_scan_0003.fits  m3_scan_0005.fits  m3_scan_0006.fits  m3_scan_0008.fits
Data_for_Jonathon/z-1000/: 1.fits  2.fits
Data_for_Jonathon/z-500/: 1.fits  3.fits
QtUI/: _main.py  buildui.sh  main.py  main.ui
figure_images/: cdifigure.xcf  colorbarwithalpha.xcf  xuv_experimental_setup.xcf
figure_images/data_nn_diagram/: datagen_nn.xcf
figure_images/nn_diagram/: nndiagram.xcf
live_capture/: live_stream_test.py  tiscamera_0.11.1_amd64.deb
matlab_cdi/: cdi_interpolation.m  seeded_reconst_func.m  seeded_run_CDI_noprocessing.m
models/: diffraction_net.py_test1.py  diffraction_net_test1.py
mp_plotdata/: plot.py
retrieval_ui/: .gitignore  manage.py  package-lock.json  package.json
retrieval_ui/app/: urls.py  views.py
retrieval_ui/neuralnet/: CompareNN_MatlabBilinearInterp.py  GetMeasuredDiffractionPattern.py  PropagateSphericalAperture.py  TestPropagate.py  datagen.py  diffraction_functions.py  diffraction_net.py  main.py  makeplots.py  noise_resistant_net.py  noise_test_compareCDI.sh  params.py  run_network.py  run_tests.sh  rungdb.sh  sample.p  training_data_samples.p
retrieval_ui/neuralnet/live_capture/: live_stream_test.py  setup.txt
retrieval_ui/reactapps/retrieval/: package-lock.json  package.json
retrieval_ui/retrieval_ui_server/: settings.py  urls.py  wsgi.py
retrieval_ui/src/: App.js  index.js
retrieval_ui/src/diffractionplot/: diffractionplot.js
retrieval_ui/src/draggablewindow/: draggablewindow.js  styles.css
retrieval_ui/src/opensbutton/: data.js  (+3 more)
zernike3/: .gitignore  CMakeLists.txt  loadmodules.sh  run.sh  runmpi.sh
zernike3/src/: MeasuredImageFormatter.cpp  MeasuredImageFormatter.h  MeasuredImageFormatterWrapper.cpp  MeasuredImageFormatterWrapper.h  c_arrays.h  main.cpp  python.txt  pythonarrays.h  testprop.cpp  utility.h  zernikecuda.h  zernikecudawrapper.cu  zernikedatagen.h
(+113 files in other folders)
